WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69922
[Chromium] Web Inspector: assertion failure when evaluating expression in worker inspector console
https://bugs.webkit.org/show_bug.cgi?id=69922
Summary
[Chromium] Web Inspector: assertion failure when evaluating expression in wor...
Yury Semikhatsky
Reported
2011-10-12 05:58:17 PDT
1. Build Chromium debug. 2. Open inspector for a shared worker. 3. Try to evaluate in the console 1+1 Result: # # Fatal error in v8/src/objects-inl.h, line 1516 # CHECK(index < GetInternalFieldCount() && index >= 0) failed #
Attachments
Patch
(1.47 KB, patch)
2011-10-12 06:23 PDT
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2011-10-12 06:23:56 PDT
Created
attachment 110678
[details]
Patch
anton muhin
Comment 2
2011-10-12 06:38:13 PDT
Comment on
attachment 110678
[details]
Patch lgtm
Yury Semikhatsky
Comment 3
2011-10-12 06:47:30 PDT
Committed
r97258
: <
http://trac.webkit.org/changeset/97258
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug