[Chromium] Web Inspector: assertion failure when evaluating expression in worker inspector console https://bugs.webkit.org/show_bug.cgi?id=69922

Check that the global object is a DOMWindow wrapper befor casting it to V8DOMWindow.

Reviewed by Pavel Feldman.

* bindings/v8/ScriptState.cpp:
(WebCore::ScriptState::domWindow):

Canonical link: https://commits.webkit.org/85989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97258 268f45cc-cd09-0410-ab3c-d52691b4dbfc